Rel 1.2.3 merge fix (#1099)
* Move all template ids from application-dev.properties to application.properties and remove duplicates from values.yaml

* Remove REFERRAL_TEMPLATE_ID that is specific to demo, changed the non-demo template to match requirements

* Cleaning NotificationProperties by moving it into EmailService.
Clean up the two referral controllers to interact just with their new ReferralService.
Make everywhere not access EmaiLService private value fields
Move CreateReferralService.java to ReferralService.java

* Fix tests, accidental +caseId still remaining, clean a little, and add EmailService tests

* Move properties around

* Replace rejected template id with new one and a dynamic link

* Replace serving template id with new one and a dynamic link

* Fix tests by mocking emailService calls

* Remove resetting of mocks and mock emailService getting citizen case link

* Fix wrong data going to wrong template, remade template for et1 serving for respondent

* Fix tests for ServingServiceTest by mocking getExuiCaseLink

* Add tests to check personalisation of ET1SERVING_TEMPLATE_ID and ET1SERVING_RESPONDENT_TEMPLATE_ID

* Bumping chart version/ fixing aliases

* Temp suppression to get merge master in

* RET-3675. Remove NotificationProperties.java

* Only pass CaseData, not case details

* remove extra lines from buildPersonalisation

* Fix test for casedata change

* Try removing squareup suppression

* CVE fix

* RET-3397. Implement dynamic links for all templates (#1040)

* New dynamic link for et3Response.notification.tribunal.template.id

* New dynamic link for et3Notification.template.myhmcts.id and et3Notification.template.citizen.id

* Switch EmailServiceMock with a whole TestEmailService implementation using a constructor that mocks NotificationClient

* Utilise TestEmailService whenever we mock methods on EmailService in test

* Potential fix for FT failure

* 3397. Revert Robin's change 